--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5173"
   },
   "dependencies": {
     "@ant-design/charts": "^2.2.4",
     "@ant-design/icons": "^5.5.2",
     "antd": "^5.22.4",
     "axios": "^1.7.9",
+    "curningroom": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
