--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.22.4",
     "axios": "^1.7.9",
     "curningroom": "file:",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
